--- a/LCFInfiniteScrollView/Base.lproj/Main.storyboard
+++ b/LCFInfiniteScrollView/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--精品推荐-->
         <scene sceneID="yfy-E6-yyv">
             <objects>
-                <tableViewController id="dvs-jj-cIo" sceneMemberID="viewController">
+                <tableViewController id="dvs-jj-cIo" customClass="TableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="cRk-3L-44p">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -28,7 +28,7 @@
                             <outlet property="delegate" destination="dvs-jj-cIo" id="OUL-6A-aHB"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="cVo-P5-MDu"/>
+                    <navigationItem key="navigationItem" title="精品推荐" id="cVo-P5-MDu"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SsO-uH-Qs0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
